// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures should add display names 1`] = `
"const Test = styled.div.withConfig({
  displayName: \\"Test\\"
})\`width:100%;\`;
const Test2 = styled('div').withConfig({
  displayName: \\"Test2\\"
})\`\`;
const Test3 = true ? styled.div.withConfig({
  displayName: \\"Test3\\"
})\`\` : styled.div.withConfig({
  displayName: \\"Test3\\"
})\`\`;
const styles = {
  One: styled.div.withConfig({
    displayName: \\"One\\"
  })\`\`
};
let Component;
Component = styled.div.withConfig({
  displayName: \\"Component\\"
})\`\`;
const WrappedComponent = styled(Inner).withConfig({
  displayName: \\"WrappedComponent\\"
})\`\`;

class ClassComponent {}

ClassComponent.Child = styled.div.withConfig({
  displayName: \\"Child\\"
})\`\`;"
`;

exports[`fixtures should add identifier 1`] = `
"const Test = styled.div.withConfig({
  componentId: \\"wkc8iz-0\\"
})\`width:100%;\`;
const Test2 = true ? styled.div.withConfig({
  componentId: \\"wkc8iz-1\\"
})\`\` : styled.div.withConfig({
  componentId: \\"wkc8iz-2\\"
})\`\`;
const styles = {
  One: styled.div.withConfig({
    componentId: \\"wkc8iz-3\\"
  })\`\`
};
let Component;
Component = styled.div.withConfig({
  componentId: \\"wkc8iz-4\\"
})\`\`;
const WrappedComponent = styled(Inner).withConfig({
  componentId: \\"wkc8iz-5\\"
})\`\`;"
`;

exports[`fixtures should add identifier and display name 1`] = `
"const Test = styled.div.withConfig({
  displayName: \\"Test\\",
  componentId: \\"sc-1n5umup-0\\"
})\`width:100%;\`;
const Test2 = true ? styled.div.withConfig({
  displayName: \\"Test2\\",
  componentId: \\"sc-1n5umup-1\\"
})\`\` : styled.div.withConfig({
  displayName: \\"Test2\\",
  componentId: \\"sc-1n5umup-2\\"
})\`\`;
const styles = {
  One: styled.div.withConfig({
    displayName: \\"One\\",
    componentId: \\"sc-1n5umup-3\\"
  })\`\`
};
let Component;
Component = styled.div.withConfig({
  displayName: \\"Component\\",
  componentId: \\"sc-1n5umup-4\\"
})\`\`;
const WrappedComponent = styled(Inner).withConfig({
  displayName: \\"WrappedComponent\\",
  componentId: \\"sc-1n5umup-5\\"
})\`\`;"
`;

exports[`fixtures should allow chains of member calls 1`] = `
"const WithAttrs = styled.div.attrs({
  some: 'value'
}).withConfig({
  displayName: \\"WithAttrs\\"
})\`\`;
const WithAttrsWrapped = styled(Inner).attrs({
  some: 'value'
}).withConfig({
  displayName: \\"WithAttrsWrapped\\"
})\`\`;"
`;

exports[`fixtures should annotate create global style with pure comments 1`] = `
"const GlobalStyle =
/*#__PURE__*/
createGlobalStyle\`
  body {
    color: red;
  }
\`;"
`;

exports[`fixtures should annotate css with pure comments 1`] = `
"const partial =
/*#__PURE__*/
css([\\"color:red;\\"]);
const Component =
/*#__PURE__*/
styled.div.withConfig({
  displayName: \\"annotate-css-with-pure-comments__Component\\",
  componentId: \\"sc-17hq72a-0\\"
})([\\"\\", \\";background:blue;\\"], partial);"
`;

exports[`fixtures should annotate keyframes with pure comments 1`] = `
"const Animation =
/*#__PURE__*/
keyframes([\\"0%{opacity:0;}100%{opacity:1;}\\"]);"
`;

exports[`fixtures should annotate styled calls with pure comments 1`] = `
"const Test =
/*#__PURE__*/
styled.div.withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__Test\\",
  componentId: \\"sc-6tnjs3-0\\"
})([\\"width:100%;\\"]);
const Test2 =
/*#__PURE__*/
styled('div').withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__Test2\\",
  componentId: \\"sc-6tnjs3-1\\"
})([\\"\\"]);
const Test3 = true ? styled.div.withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__Test3\\",
  componentId: \\"sc-6tnjs3-2\\"
})([\\"\\"]) : styled.div.withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__Test3\\",
  componentId: \\"sc-6tnjs3-3\\"
})([\\"\\"]);
const styles = {
  One: styled.div.withConfig({
    displayName: \\"annotate-styled-calls-with-pure-comments__One\\",
    componentId: \\"sc-6tnjs3-4\\"
  })([\\"\\"])
};
let Component;
Component = styled.div.withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__Component\\",
  componentId: \\"sc-6tnjs3-5\\"
})([\\"\\"]);
const WrappedComponent =
/*#__PURE__*/
styled(Inner).withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__WrappedComponent\\",
  componentId: \\"sc-6tnjs3-6\\"
})([\\"\\"]);
const StyledObjectForm =
/*#__PURE__*/
styled.div.withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__StyledObjectForm\\",
  componentId: \\"sc-6tnjs3-7\\"
})({
  color: red
});
const StyledFunctionForm =
/*#__PURE__*/
styled.div.withConfig({
  displayName: \\"annotate-styled-calls-with-pure-comments__StyledFunctionForm\\",
  componentId: \\"sc-6tnjs3-8\\"
})(p => ({
  color: p.color || 'red'
}));
const normalFunc = add(5, 3);"
`;

exports[`fixtures should does not desugar styled assignment 1`] = `
"const domElements = ['div'];

const styled = () => {};

domElements.forEach(domElement => {
  styled[domElement] = styled(domElement);
});"
`;

exports[`fixtures should does not replace native with no tags 1`] = `
"const styled_default = require('styled-components/native');

const TestNormal = styled.div.withConfig({
  displayName: \\"does-not-replace-native-with-no-tags__TestNormal\\",
  componentId: \\"sc-1vnscvm-0\\"
})([\\"width:100%;\\"]);
const Test = styled_default.default.div.withConfig({
  displayName: \\"does-not-replace-native-with-no-tags__Test\\",
  componentId: \\"sc-1vnscvm-1\\"
})([\\"width:100%;\\"]);
const TestCallExpression = styled_default.default(Test).withConfig({
  displayName: \\"does-not-replace-native-with-no-tags__TestCallExpression\\",
  componentId: \\"sc-1vnscvm-2\\"
})([\\"height:20px;\\"]);"
`;

exports[`fixtures should minify css in helpers 1`] = `
"import { css, keyframes } from 'styled-components';
const key = keyframes\`to{transform:rotate(360deg);}\`;
const color = css\`color:\${theColor};\`;"
`;

exports[`fixtures should minify css to use with transpilation 1`] = `
"\\"use strict\\";

var _styledComponents = _interopRequireDefault(require(\\"styled-components\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _templateObject5() {
  var data = _taggedTemplateLiteral([\\"&:hover{color:blue;}\\"]);

  _templateObject5 = function _templateObject5() {
    return data;
  };

  return data;
}

function _templateObject4() {
  var data = _taggedTemplateLiteral([\\"color:red;\\"]);

  _templateObject4 = function _templateObject4() {
    return data;
  };

  return data;
}

function _templateObject3() {
  var data = _taggedTemplateLiteral([\\"content:\\\\\\"  \\", \\"  \\\\\\";color:red;\\"]);

  _templateObject3 = function _templateObject3() {
    return data;
  };

  return data;
}

function _templateObject2() {
  var data = _taggedTemplateLiteral([\\"content:\\\\\\"  \\", \\"  \\\\\\";\\"]);

  _templateObject2 = function _templateObject2() {
    return data;
  };

  return data;
}

function _templateObject() {
  var data = _taggedTemplateLiteral([\\"width:100%;\\"]);

  _templateObject = function _templateObject() {
    return data;
  };

  return data;
}

function _taggedTemplateLiteral(strings, raw) { if (!raw) { raw = strings.slice(0); } return Object.freeze(Object.defineProperties(strings, { raw: { value: Object.freeze(raw) } })); }

var Simple = _styledComponents.default.div(_templateObject());

var Interpolation = _styledComponents.default.div(_templateObject2(), function (props) {
  return props.text;
});

var SpecialCharacters = _styledComponents.default.div(_templateObject3(), function (props) {
  return props.text;
});

var Comment = _styledComponents.default.div(_templateObject4());

var Parens = _styledComponents.default.div(_templateObject5());"
`;

exports[`fixtures should minify css to use without transpilation 1`] = `
"import styled from 'styled-components';
const Simple = styled.div\`width:100%;\`;
const Interpolation = styled.div\`content:\\"https://test.com/\${props => props.endpoint}\\";\`;
const SpecialCharacters = styled.div\`content:\\"  \${props => props.text}  \\";color:red;\`;
const Comment = styled.div\`width:100%;color:red;\`;
const Parens = styled.div\`&:hover{color:blue;}color:red;\`;
const UrlComments = styled.div\`color:red;background:red;border:1px solid green;\`;"
`;

exports[`fixtures should minify single line comments with interpolations 1`] = `
"import styled from 'styled-components';
const Test1 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test1\\",
  componentId: \\"sc-1p41dy5-0\\"
})([\\"width:100%;\\"]);
const Test2 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test2\\",
  componentId: \\"sc-1p41dy5-1\\"
})([\\"width:100%;\\"]);
const Test3 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test3\\",
  componentId: \\"sc-1p41dy5-2\\"
})([\\"width:100%;\\", \\";\\"], 'red');
const Test4 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test4\\",
  componentId: \\"sc-1p41dy5-3\\"
})([\\"width:100%;\\"]);
const Test5 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test5\\",
  componentId: \\"sc-1p41dy5-4\\"
})([\\"width:100%;\\"]);
const Test6 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test6\\",
  componentId: \\"sc-1p41dy5-5\\"
})([\\"background:url(\\\\\\"https://google.com\\\\\\");width:100%;\\", \\" \\"], 'green');
const Test7 = styled.div.withConfig({
  displayName: \\"minify-single-line-comments-with-interpolations__Test7\\",
  componentId: \\"sc-1p41dy5-6\\"
})([\\"background:url(\\\\\\"https://google.com\\\\\\");width:\\", \\";\\", \\"  height:\\", \\";\\"], p => p.props.width, 'green', p => p.props.height);"
`;

exports[`fixtures should not use private api if not required 1`] = `
"import styled from 'styled-components';
const Test = styled.div\`width:100%;\`;"
`;

exports[`fixtures should track the imported variable 1`] = `
"import s from \\"styled-components\\";
const Test = s.div.withConfig({
  displayName: \\"Test\\",
  componentId: \\"g2kfnj-0\\"
})\`width:100%;\`;
const Test2 = true ? s.div.withConfig({
  displayName: \\"Test2\\",
  componentId: \\"g2kfnj-1\\"
})\`\` : s.div.withConfig({
  displayName: \\"Test2\\",
  componentId: \\"g2kfnj-2\\"
})\`\`;
const styles = {
  One: s.div.withConfig({
    displayName: \\"One\\",
    componentId: \\"g2kfnj-3\\"
  })\`\`
};
let Component;
Component = s.div.withConfig({
  displayName: \\"Component\\",
  componentId: \\"g2kfnj-4\\"
})\`\`;
const WrappedComponent = s(Inner).withConfig({
  displayName: \\"WrappedComponent\\",
  componentId: \\"g2kfnj-5\\"
})\`\`;"
`;

exports[`fixtures should transpile css prop 1`] = `
"\\"use strict\\";

var _styledComponents = _interopRequireDefault(require(\\"styled-components\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _templateObject3() {
  var data = _taggedTemplateLiteral([\\"\\\\n      color: \\", \\";\\\\n    \\"]);

  _templateObject3 = function _templateObject3() {
    return data;
  };

  return data;
}

function _templateObject2() {
  var data = _taggedTemplateLiteral([\\"\\\\n      color: \\", \\";\\\\n    \\"]);

  _templateObject2 = function _templateObject2() {
    return data;
  };

  return data;
}

function _templateObject() {
  var data = _taggedTemplateLiteral([\\"\\\\n      color: blue;\\\\n    \\"]);

  _templateObject = function _templateObject() {
    return data;
  };

  return data;
}

function _taggedTemplateLiteral(strings, raw) { if (!raw) { raw = strings.slice(0); } return Object.freeze(Object.defineProperties(strings, { raw: { value: Object.freeze(raw) } })); }

/*
 * Basic fixtures
 */
var StaticString = function StaticString(p) {
  return <_StyledP>A</_StyledP>;
};

var StaticTemplate = function StaticTemplate(p) {
  return <_StyledP2>
    A
  </_StyledP2>;
};

var ObjectProp = function ObjectProp(p) {
  return <_StyledP3 _$p_={{
    color: 'blue'
  }}>A</_StyledP3>;
};

var NoChildren = function NoChildren(p) {
  return <_StyledP4 />;
};

var CssHelperProp = function CssHelperProp(p) {
  return <_StyledP5>
    A
  </_StyledP5>;
};
/*
 * Dynamic prop
 */


var CustomComp = function CustomComp(p) {
  return <_StyledParagraph>H</_StyledParagraph>;
};

var DynamicProp = function DynamicProp(p) {
  return <_StyledP6 _$p_2={props.cssText}>H</_StyledP6>;
};

var LocalInterpolation = function LocalInterpolation(p) {
  return <_StyledP7 _$p_3={props.bg}>
    H
  </_StyledP7>;
};

var FuncInterpolation = function FuncInterpolation(p) {
  return <_StyledP8>
    H
  </_StyledP8>;
};

var radius = 10;

var GlobalInterpolation = function GlobalInterpolation(p) {
  return <_StyledP9>
    H
  </_StyledP9>;
};

var LocalCssHelperProp = function LocalCssHelperProp(p) {
  return <_StyledP10 _$p_4={p.color}>
    A
  </_StyledP10>;
};

var DynamicCssHelperProp = function DynamicCssHelperProp(p) {
  return <_StyledP11>
    A
  </_StyledP11>;
};

var CustomCompWithDot = function CustomCompWithDot(p) {
  return <_StyledButtonGhost>H</_StyledButtonGhost>;
};

var NestedCompWithDot = function NestedCompWithDot(p) {
  return <_StyledButtonGhostNew>H</_StyledButtonGhostNew>;
};

var _StyledP = (0, _styledComponents.default)(\\"p\\")\`flex: 1;\`;

var _StyledP2 = _styled(\\"p\\")\`
      flex: 1;
    \`;

var _StyledP3 = _styled(\\"p\\")\`\${p => p._$p_}\`;

var _StyledP4 = _styled(\\"p\\")\`flex: 1;\`;

var _StyledP5 = _styled(\\"p\\")\`
      color: blue;
    \`;

var _StyledParagraph = _styled(Paragraph)\`flex: 1\`;

var _StyledP6 = _styled(\\"p\\")\`\${p => p._$p_2}\`;

var _StyledP7 = _styled(\\"p\\")\`
      background: \${function (p) {
  return p._$p_3;
}};
    \`;

var _StyledP8 = _styled(\\"p\\")\`
      color: \${function (props) {
  return props.theme.a;
}};
    \`;

var _StyledP9 = _styled(\\"p\\")\`
      border-radius: \${radius}px;
    \`;

var _StyledP10 = _styled(\\"p\\")\`
      color: \${function (p) {
  return p._$p_4;
}};
    \`;

var _StyledP11 = _styled(\\"p\\")\`
      color: \${function (props) {
  return props.theme.color;
}};
    \`;

var _StyledButtonGhost = _styled(Button.Ghost)\`flex: 1\`;

var _StyledButtonGhostNew = _styled(Button.Ghost.New)\`flex: 1\`;"
`;

exports[`fixtures should transpile css prop add import 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

var _Card = _interopRequireDefault(require(\\"../../shared/components/Card\\"));

var _config = _interopRequireDefault(require(\\"../../../config\\"));

var _styledComponents = _interopRequireDefault(require(\\"styled-components\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

// @flow
var _default = function _default() {
  return <_StyledDiv>
    <_Card.default>
      <h1>Login or Sign Up</h1>
      <p>
        <a href={_config.default.API_URI + '/auth/google'}>
          Sign up or login with Google
        </a>
      </p>
    </_Card.default>
  </_StyledDiv>;
};

exports.default = _default;

var _StyledDiv = (0, _styledComponents.default)(\\"div\\")\`
      width: 35em;
    \`;"
`;

exports[`fixtures should transpile require default 1`] = `
"const styled_default = require(\\"styled-components\\");

const TestNormal = styled.div.withConfig({
  displayName: \\"transpile-require-default__TestNormal\\",
  componentId: \\"stn6f-0\\"
})([\\"width:100%;\\"]);
const Test = styled_default.default.div.withConfig({
  displayName: \\"transpile-require-default__Test\\",
  componentId: \\"stn6f-1\\"
})([\\"width:100%;\\"]);
const TestCallExpression = styled_default.default(Test).withConfig({
  displayName: \\"transpile-require-default__TestCallExpression\\",
  componentId: \\"stn6f-2\\"
})([\\"height:20px;\\"]);"
`;

exports[`fixtures should transpile template literals with config 1`] = `
"\\"use strict\\";

var _styledComponents = _interopRequireDefault(require(\\"styled-components\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Named = _styledComponents.default.div.withConfig({
  displayName: \\"transpile-template-literals-with-config__Named\\"
})([\\"\\\\n  width: 100%;\\\\n\\"]);

var NamedWithInterpolation = _styledComponents.default.div.withConfig({
  displayName: \\"transpile-template-literals-with-config__NamedWithInterpolation\\"
})([\\"\\\\n  color: \\", \\";\\\\n\\"], function (color) {
  return props.color;
});

var Wrapped = (0, _styledComponents.default)(Inner).withConfig({
  displayName: \\"transpile-template-literals-with-config__Wrapped\\"
})([\\"\\\\n  color: red;\\\\n\\"]);

var Foo = _styledComponents.default.div.withConfig({
  displayName: \\"transpile-template-literals-with-config__Foo\\"
})({
  color: 'green'
});"
`;

exports[`fixtures should transpile template literals without config 1`] = `
"\\"use strict\\";

var _styledComponents = _interopRequireDefault(require(\\"styled-components\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Named = _styledComponents.default.div([\\"\\\\n  width: 100%;\\\\n\\"]);

var NamedWithInterpolation = _styledComponents.default.div([\\"\\\\n  color: \\", \\";\\\\n\\"], function (color) {
  return props.color;
});

var Wrapped = (0, _styledComponents.default)(Inner)([\\"color: red;\\"]);"
`;

exports[`fixtures should use file name 1`] = `
"import styled from \\"styled-components\\";
const Test = styled.div.withConfig({
  displayName: \\"use-file-name__Test\\",
  componentId: \\"sc-15riiwx-0\\"
})\`color:red;\`;
const before = styled.div.withConfig({
  displayName: \\"use-file-name__before\\",
  componentId: \\"sc-15riiwx-1\\"
})\`color:blue;\`;
styled.div.withConfig({
  displayName: \\"use-file-name\\",
  componentId: \\"sc-15riiwx-2\\"
})\`\`;
export default styled.button.withConfig({
  displayName: \\"use-file-name\\",
  componentId: \\"sc-15riiwx-3\\"
})\`\`;"
`;

exports[`fixtures should work with hoisted default as import 1`] = `
"const Test = s.div.withConfig({
  displayName: \\"work-with-hoisted-default-as-import__Test\\",
  componentId: \\"sc-1te5tgi-0\\"
})\`width:100%;\`;
import { default as s, css } from 'styled-components';"
`;
